[gd_scene load_steps=3 format=3 uid="uid://cp6essdma6t72"]

[ext_resource type="Script" path="res://framework/wjNPCBase.gd" id="1_5epdq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mmva5"]
radius = 0.747

[node name="wjNPCBase" type="Node3D"]
script = ExtResource("1_5epdq")

[node name="actionPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19, 0)

[node name="actionDisplay" type="Label3D" parent="actionPivot"]
unique_name_in_owner = true
billboard = 1
modulate = Color(0.337255, 0.709804, 1, 1)
text = "NPC"

[node name="ActionSensor" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ActionSensor"]
shape = SubResource("SphereShape3D_mmva5")

[connection signal="body_entered" from="ActionSensor" to="." method="_on_action_sensor_body_entered"]
[connection signal="body_exited" from="ActionSensor" to="." method="_on_action_sensor_body_exited"]
